2007-05-08 Igor Zelmanovich <igorz@mainsoft.com>

	* RunWorkerCompletedEventArgs.cs: added 'new' keyword, cause 
	UserState hides inherit property.

2007-04-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* RecommendedAsConfigurableAttribute.cs: Mark obsolete on 2.0 profile.

2007-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MaskedTextProvider.cs: Make internal methods private.

2007-02-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MaskedTextProvider.cs: Added.

2007-02-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTimeConverter.cs: Fixed typo in exception message.

2007-02-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeDescriptor.cs: Do not assume that an ISite always has an
	ITypeDescriptorFilterService. Fixes bug #80836.

2007-01-29  Marek Habersack  <grendello@gmail.com>

	* PasswordPropertyTextAttribute.cs: Implement.

2007-01-21  Zoltan Varga  <vargaz@gmail.com>

	* RecommendedAsConfigurableAttribute.cs: Make this non-obsolete to fix
	the 2.0 build, since System.ServiceProcess.ServiceController uses it.

2007-01-20  Chris Toshok  <toshok@ximian.com>

	* InheritanceLevel.cs: 2.0 class-status work.

	* ListSortDirection.cs: same.

	* BindableSupport.cs: same.

	* SyntaxCheck.cs: same.

	* CancelEventHandler.cs: same.

	* ListChangedEventHandler.cs: same.

	* SettingsBindableAttribute.cs: same.

	* ToolboxItemFilterType.cs: same.

	* PropertyChangedEventHandler.cs: same.

	* MarshalByValueComponent.cs: same.

	* LicenseUsageMode.cs: same.

	* RefreshProperties.cs: same.

	* RecommendedAsConfigurableAttribute.cs: same.

2007-01-20  Chris Toshok  <toshok@ximian.com>

	* BindingList.cs: new class.

2007-01-13  Miguel de Icaza  <miguel@novell.com>

	* DataObjectFieldAttribute.cs: Removed some code I left from the
	copy/paste activity from the xxxMethodxx.

2007-01-12  Miguel de Icaza  <miguel@novell.com>

	* DataObjectFieldAttribute.cs: Add new file.

2007-01-11  Dick Porter  <dick@ximian.com>
