@@ -42,6 +42,9 @@ namespace System.ComponentModel
 		private int native_error_code;
 
 //		[SecurityPermission (SecurityAction.LinkDemand, UnmanagedCode = true)]		
+#if TARGET_JVM
+		[MonoNotSupported("")]
+#endif
 		public Win32Exception ()
 			: base (W32ErrorMessage (Marshal.GetLastWin32Error ()),
 				Marshal.GetLastWin32Error ()) 
@@ -64,12 +67,18 @@ namespace System.ComponentModel
 		}
 #if NET_2_0
 		[SecurityPermission (SecurityAction.LinkDemand, UnmanagedCode = true)]		
+#if TARGET_JVM
+		[MonoNotSupported ("")]
+#endif
 		public Win32Exception (string message)
 			: base (message)
 		{
 			native_error_code = Marshal.GetLastWin32Error ();
 		}
 
+#if TARGET_JVM
+		[MonoNotSupported ("")]
+#endif
 		[SecurityPermission (SecurityAction.LinkDemand, UnmanagedCode = true)]		
 		public Win32Exception (string message, Exception innerException)
 			: base (message, innerException)
